// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list item render correctly with role 1`] = `
.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
  <p
    className="c2"
  >
    admin
  </p>
</div>
`;

exports[`user list item render correctly without role 1`] = `
.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid;
  grid-column: logout;
  float: right;
  width: 100px;
  padding: 4px;
  border: 1px solid;
}

.c2:hover {
  opacity: 0.90;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

.c2:focus {
  outline: none;
}

.c2:active {
  opacity: 0.80;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
  <button
    className="c2"
    onClick={[Function]}
  >
    delete
  </button>
</div>
`;
